--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 
 <body class="ClassBody">
-
     <!--NAVBAR-->
     <header class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -68,8 +67,10 @@
                         <p>Contraseña</p>
                         <input type="text" class="form-control" id="floatingInputText" placeholder="text">
                     </div>
-                    <button class="w-100 btn btn-lg colorBtn " type="submit">Enviar</button>
-                    <button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar secion</button>
+                    <!--<button class="w-100 btn btn-lg colorBtn " type="submit">Enviar</button>-->
+                    <a href="./error404.htmlEnviar"></a>
+                    <!--<button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar seción</button>-->
+                    <a href="./error404.html">Inciar seción</a>
                 </form>
             </div>
         </div>
