--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,7 +57,7 @@
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold 4h-1 text-body-emphasis mb-3">PROA </h1>
                     <p class="ParrafoDeHome">Dejanos tus consulta, te estaremos respondiendo dentro de las 48hs. <br>No
-                        hacemos venta mayorista.</p>
+                        Hacemos venta mayorista.</p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5 ">
                     <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
@@ -74,7 +74,10 @@
                             <p>Numero de Whats app</p>
                             <input type="number" class="form-control" id="floatingInputText" placeholder="number">
                         </div>
-                        <button class="w-100 btn btn-lg colorBtn " type="submit">Enviar</button>
+                        <!--<button> class="w-100 btn btn-lg colorBtn" Enviar </button>-->
+                        <a href="../error404.html">Enviar</a>
+
+                        <!-- input type="submit">-->
                         <small class="text-body-secondary"> Te estaremos respondiendo a la breved.</small>
                     </form>
                 </div>
