--- a/error404.html
+++ b/error404.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eerror 404</title>
+    <title>Error 404</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <img src="./error404.html" alt="Erros 404">
+    <img src="./error404.html" alt="Error 404">
     <a href="./index.html"> Volver a inicio</a>
 </body>
 </html>
