--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                         <input type="text" class="form-control" id="floatingInputText" placeholder="text">
                     </div>
                     <!--<button class="w-100 btn btn-lg colorBtn " type="submit">Enviar</button>-->
-                    <a href="./error404.htmlEnviar"></a>
+                    a <img src="./img/Error404.jpg" alt="Error404">
+                    <a href="./index.html"Enviar></a>
                     <!--<button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar seción</button>-->
-                    <a href="./error404.html">Inciar seción</a>
+                    a <img src="./img/Error404.jpg" alt="Error404">
+                    <a href="./index.html">Inciar seción</a>
                 </form>
             </div>
         </div>
