--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -75,7 +75,9 @@
                             <input type="number" class="form-control" id="floatingInputText" placeholder="number">
                         </div>
                         <!--<button> class="w-100 btn btn-lg colorBtn" Enviar </button>-->
-                        <a href="../error404.html">Enviar</a>
+                        a <img src="../img/Error404.jpg" alt="Error404">
+                        <a href="../index.html">Enviar</a>
+                        
                         <!-- input type="submit">-->
                         <small class="text-body-secondary"> Te estaremos respondiendo a la breved.</small>
                     </form>
