--- a/index.html
+++ b/index.html
@@ -67,17 +67,16 @@
                         <p>Contraseña</p>
                         <input type="text" class="form-control" id="floatingInputText" placeholder="text">
                     </div>
-                    <!--<button class="w-100 btn btn-lg colorBtn " type="submit">Enviar</button>-->
-                    a <img src="./img/Error404.jpg" alt="Error404">
-                    <a href="./index.html"Enviar></a>
-                    <!--<button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar seción</button>-->
-                    a <img src="./img/Error404.jpg" alt="Error404">
-                    <a href="./index.html">Inciar seción</a>
+                    <button class="w-100 btn btn-lg colorBtn " type="submit">Enviar</button>
+                    <!--a <img src="./img/Error404.jpg" alt="Error404">
+                    <a href="./index.html"Enviar></a>-->
+                    <button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar seción</button>
+                    <!--a <img src="./img/Error404.jpg" alt="Error404">
+                    <a href="./index.html">Inciar seción</a>-->
                 </form>
             </div>
         </div>
     </div>
-
     <h2>
         <p class="ParrafoDeHome"><br>La decoración del hogar es un proceso creativo que permite expresar la personalidad y el estilo de cada individuo. <br> Es una forma de hacer que nuestro hogar sea un espacio más agradable, acogedor y personalizado.
         <br> <br> Una vez que tengas claro tu estilo, podrás empezar a elegir muebles, accesorios y elementos decorativos que lo reflejen.
