--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,18 +68,15 @@
                         </div>
                         <div class="form-floating mb-3">
                             <p>Dejanos tus consulta</p>
-                            <input type="text" class="form-control" id="floatingInputText" placeholder="text">
+                            <input type="text" class="form-control" id="floatingInputText" name="consulta" placeholder="text">
                         </div>
                         <div class="form-floating mb-3">
                             <p>Numero de Whats app</p>
-                            <input type="number" class="form-control" id="floatingInputText" placeholder="number">
+                            <input type="number" class="form-control" id="floatingInputText" name="numero_whatsapp" placeholder="number">
                         </div>
-                        <!--<button> class="w-100 btn btn-lg colorBtn" Enviar </button>-->
-                        a <img src="../img/Error404.jpg" alt="Error404">
-                        <a href="../index.html">Enviar</a>
-                        
-                        <!-- input type="submit">-->
+                        <button class="w-100 btn btn-lg colorBtn" type="submit">Enviar consulta</button>
                         <small class="text-body-secondary"> Te estaremos respondiendo a la breved.</small>
+                        <!--<img id="img-error" src="../img/Error404.jpg" alt="Error 404">-->
                     </form>
                 </div>
             </div>
